--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -18,9 +18,8 @@ nameOverride: ""
 fullnameOverride: ""
 
 service:
-  type: NodePort
+  type: ClusterIP
   port: "8080"
-  nodePort: "32004"
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
